buttons + adding category work

--- a/index.html
+++ b/index.html
@@ -1,1 +1,50 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Document</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" >
 
+</head>
+<body>
+
+    <!--Category buttons-->
+    <div class="container" id="gif-buttons">
+
+    </div>
+
+    <!--Create new category-->
+    <div class="container">
+        <div class="input-group mb-3">
+            <!--Text input-->
+            <input type="text" class="form-control" placeholder="add category (ex: cats)" id="category-input">
+            <div class="input-group-append">
+                <!--add button-->
+                <button class="btn btn-primary" type="button" id="add-category">Add Category</button>
+            </div>
+        </div>
+    </div>
+
+
+    <!--Gif list-->
+    <div class="container" id="category-view">
+    </div>
+
+
+
+
+
+
+
+
+
+
+    <!--Script and bootstrap-->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script> -->
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script> 
+    <script src="script.js"></script>  
+</body>
+</html>
