working page, but needs layout and formatting work

--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
 
 
     <!--Gif list-->
-    <div class="container" id="category-view">
+    <div class="container">
+        <div class="row" id="category-view"></div>
     </div>
-
 
 
 
